# obo-authnz

./: .gitignore  LICENSE  README.md
obo_example_app/: requirements.txt
obo_example_app/src/obo_example_app/: context.py  database.py  llm_agent.py  main.py  middleware.py  models.py  notes_service.py
obo_example_app/src/obo_example_app/static/: index.html
obo_prototype/: pyproject.toml  test_isolation.py
obo_prototype/src/obo_prototype/: context.py  main.py  middleware.py  mock_resource.py  runtime.py
