[project]
name = "obo-prototype"
version = "0.1.0"
description = "Prototype for OBO Authnz in LLM Agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "python-multipart", # for some auth flows if needed
    "python-jose[cryptography]", # for JWT handling if we get there
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
